# aip_launcher

./: .pre-commit-config.yaml  .prettierignore  README.md  build_depends.repos
.github/: sync-files.yaml
.github/workflows/: sync-public-develop.yaml  sync-public.yaml
aip_x1-1_description/: CMakeLists.txt  package.xml
aip_x1-1_description/config/: sensor_kit_calibration.yaml
aip_x1-1_description/urdf/: sensor_kit.xacro  sensors.xacro
aip_x1-1_launch/: CMakeLists.txt  package.xml
aip_x1-1_launch/launch/: imu.launch.xml  lidar.launch.xml  sensing.launch.xml  topic_state_monitor.launch.py  velodyne_VLP16.launch.xml
aip_x1_1_description/config/: sensor_kit_calibration.yaml
aip_x1_1_description/urdf/: sensor_kit.xacro  sensors.xacro
aip_x1_1_launch/: CMakeLists.txt  package.xml
aip_x1_1_launch/config/diagnostic_aggregator/: sensor_kit.param.yaml
aip_x1_1_launch/config/ground_segmentation/: ground_segmentation.param.yaml
aip_x1_1_launch/launch/: camera.launch.xml  imu.launch.xml  lidar.launch.xml  pandar_node_container.launch.py  pointcloud_preprocessor.launch.py  sensing.launch.xml  topic_state_monitor.launch.py  topic_state_monitor.launch.xml  velodyne_node_container.launch.py
aip_x1_1_launch/launch/dummy_diag_publisher/: sensing.launch.xml
aip_x1_1_launch/launch/ground_segmentation/: ground_segmentation.launch.py
aip_x1_description/: CMakeLists.txt  package.xml
aip_x1_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
aip_x1_description/urdf/: sensor_kit.xacro  sensors.xacro
aip_x1_launch/: CMakeLists.txt  package.xml
aip_x1_launch/config/: gnss_poser.param.yaml  gyro_bias_estimator.param.yaml
aip_x1_launch/config/diagnostic_aggregator/: sensor_kit.param.yaml
aip_x1_launch/config/dummy_diag_publisher/: sensor_kit.param.yaml
aip_x1_launch/config/ground_segmentation/: ground_segmentation.param.yaml
aip_x1_launch/launch/: gnss.launch.xml  imu.launch.xml  lidar.launch.xml  new_livox_horizon.launch.py  pandar_node_container.launch.py  pointcloud_preprocessor.launch.py  sensing.launch.xml  topic_state_monitor.launch.py  topic_state_monitor.launch.xml  velodyne_VLP16.launch.xml  velodyne_node_container.launch.py
aip_x1_launch/launch/dummy_diag_publisher/: lidar.launch.xml  sensing.launch.xml
aip_x1_launch/launch/ground_segmentation/: ground_segmentation.launch.py
aip_x1_launch/launch/obstacle_segmentation/ground_segmentation/: ground_segmentation.launch.py
aip_x2_description/: CMakeLists.txt  package.xml
aip_x2_description/config/: front_unit_calibration.yaml  rear_unit_calibration.yaml  sensor_kit_calibration.yaml  sensors_calibration.yaml  top_unit_calibration.yaml
aip_x2_description/urdf/: front_unit.xacro  rear_unit.xacro  sensor_kit.xacro  sensors.xacro  top_unit.xacro
aip_x2_gen2_description/: CMakeLists.txt  package.xml
aip_x2_gen2_description/config/: sensors_calibration.yaml
aip_x2_gen2_description/urdf/: gnss.xacro  sensor_kit.xacro  sensors.xacro
aip_x2_gen2_launch/: CMakeLists.txt  package.xml
aip_x2_gen2_launch/config/: ARS548.param.yaml  asterx_sb3_rover.param.yaml  mosaic_x5_rover.param.yaml  point_filters_left_upper.param.yaml  point_filters_one_half.param.yaml  point_filters_one_third.param.yaml  point_filters_right_upper.param.yaml
aip_x2_gen2_launch/launch/: ars548.launch.xml  gnss.launch.xml  hesai_OT128.launch.xml  hesai_QT128.launch.xml  imu.launch.xml  lidar.launch.xml  nebula_node_container.launch.py  pandar_node_container.launch.py  pointcloud_preprocessor.launch.py  radar.launch.xml  sensing.launch.xml
aip_x2_launch/: CMakeLists.txt  package.xml
aip_x2_launch/config/: blockage_diagnostics_param_file.yaml  dual_return_filter.param.yaml  mosaic_x5_rover.param.yaml  simple_object_merger.param.yaml
aip_x2_launch/launch/: ars408.launch.xml  camera.launch.xml  gnss.launch.xml  hesai_OT128.launch.xml  hesai_QT128.launch.xml  image_diagnostics.launch.py  image_diagnostics_node.launch.py  imu.launch.xml  lidar.launch.xml  lidar.nebula.launch.xml  nebula_node_container.launch.py  pandar_node_container.launch.py  pointcloud_preprocessor.launch.py  radar.launch.xml  sensing.launch.xml  topic_state_monitor.launch.py  topic_state_monitor.launch.xml
aip_xx1_description/: CMakeLists.txt  package.xml
aip_xx1_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
aip_xx1_description/scripts/: compile_xacro.py
aip_xx1_description/templates/: sensor_unit.xacro.template  sensors.xacro.template
aip_xx1_description/urdf/: .gitignore  radar.xacro  sensor_kit.xacro  sensors.xacro
aip_xx1_gen2_description/: CMakeLists.txt  package.xml
aip_xx1_gen2_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
aip_xx1_gen2_description/urdf/: sensor_kit.xacro  sensors.xacro
aip_xx1_gen2_launch/: CMakeLists.txt  package.xml
aip_xx1_gen2_launch/config/: lidar_gen2.yaml  lidar_launch.yaml  mosaic_x5_rover.param.yaml  radar_simple_object_merger.param.yaml
aip_xx1_gen2_launch/launch/: camera.launch.xml  gnss.launch.xml  imu.launch.xml  lidar.launch.py  lidar.launch.xml  pointcloud_preprocessor.launch.py  radar.launch.xml  sensing.launch.xml
aip_xx1_launch/: package.xml
aip_xx1_launch/config/: lidar_gen2.yaml  lidar_launch.yaml
aip_xx1_launch/launch/: gnss.launch.xml  imu.launch.xml  lidar.launch.py  lidar.launch.xml  lidar.launch.xml.py  object_recognition_camera.launch.py  pacmod3.launch.py  pacmod3.py  pandar.launch.xml  pointcloud_preprocessor.launch.py  radar.launch.xml  radar_kvaser_can.launch.py  sensing.launch.xml  svl_pointcloud_preprocessor.launch.py
aip_xx2_description/: package.xml
aip_xx2_description/urdf/: sensor_kit.xacro  sensors.xacro
aip_xx2_launch/: CMakeLists.txt  package.xml
aip_xx2_launch/launch/: gnss.launch.xml  imu.launch.xml  lidar.launch.xml  radar.launch.xml  sensing.launch.xml
common_sensor_launch/: CMakeLists.txt  package.xml
common_sensor_launch/config/: blockage_diagnostics_param_file.yaml  gyro_bias_estimator.param.yaml  radar_tracks_noise_filter.param.yaml
(+67 files in other folders)
