<?xml version="1.0"?>
<package format="2">
  <name>aip_x1_description</name>
  <version>0.1.0</version>
  <description>The aip_x1_description package</description>

  <maintainer email="takeshi.miura@tier4.jp">Takeshi Miura</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>pandar_description</depend>
  <depend>velodyne_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
