<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aip_x1_launch</name>
  <version>0.1.0</version>
  <description>The aip_x1_launch package</description>

  <maintainer email="takeshi.miura@tier4.jp">Takeshi Miura</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>common_sensor_launch</exec_depend>
  <exec_depend>autoware_compare_map_segmentation</exec_depend>
  <exec_depend>autoware_elevation_map_loader</exec_depend>
  <exec_depend>autoware_ground_segmentation</exec_depend>
  <exec_depend>imu_corrector</exec_depend>
  <exec_depend>individual_params</exec_depend>
  <exec_depend>autoware_occupancy_grid_map_outlier_filter</exec_depend>
  <exec_depend>autoware_pointcloud_preprocessor</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>ros2_socketcan</exec_depend>
  <exec_depend>tamagawa_imu_driver</exec_depend>
  <exec_depend>topic_state_monitor</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
