<?xml version="1.0"?>
<package format="2">
  <name>aip_x2_description</name>
  <version>0.1.0</version>
  <description>The aip_x2_description package</description>

  <maintainer email="shinnosuke.hirakawa@tier4.jp">Shinnosuke Hirakawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>pandar_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
